# RootFindingAlgorithm_AdvancedProgramming_Project

./: README.md
RootFindingAlgo/: CMakeLists.txt  README.md  setup.py
RootFindingAlgo/root_finding.egg-info/: PKG-INFO  SOURCES.txt
RootFindingAlgo/src/: BisectionMethod.cpp  BisectionMethod.hpp  NewtonRaphsonMethod.cpp  NewtonRaphsonMethod.hpp  QuadfuncRootFinder.hpp  RootFindingMethod.hpp  main.cpp  pybind_module.cpp  rootFinder
RootFindingAlgo/test/: test.py  test_optimize.py
__MACOSX/RootFindingAlgo/: ._README.md
